macros/src/async_generic_target/fn/snapshots/expand_async_interface_kind_pin_box_fut_empty_body.snap
---
source: macros/src/async_generic_target/fn/mod.rs
expression: formatted1
---
fn foo() {}
fn foo_async() {
    Box::pin(async move {})
}
