macros/src/async_generic_target/fn/snapshots/expand_nop-2.snap
---
source: macros/src/async_generic_target/fn/mod.rs
expression: formatted_sync
---
fn foo() {}
async fn foo_async() {}
