macros/src/async_generic_target/fn/snapshots/expand_nop-4.snap
---
source: macros/src/async_generic_target/fn/mod.rs
expression: formatted_sync_async
---
fn foo() {}
async fn foo_async() {}
