macros/src/async_generic_target/fn/snapshots/expand_nop.snap
---
source: macros/src/async_generic_target/fn/mod.rs
expression: formatted_default
---
fn foo() {}
async fn foo_async() {}
