macros/src/async_generic_target/fn/snapshots/expand_nop_with_ret_ty.snap
---
source: macros/src/async_generic_target/fn/mod.rs
expression: formatted_default
---
fn foo() -> String {}
async fn foo_async() -> String {}
