macros/src/async_generic_target/fn/snapshots/expand_sync1.snap
---
source: macros/src/async_generic_target/fn/mod.rs
expression: formatted
---
/// # Common docs
/// # Sync Docs
fn foo() {}
/// # Common docs
async fn foo_async() {}
