macros/src/async_generic_target/fn/snapshots/expand_sync_async1.snap
---
source: macros/src/async_generic_target/fn/mod.rs
expression: formatted1
---
/// # Common docs
/// # Sync Docs
fn foo<T>() {}
/// # Common docs
/// # Async Docs
async fn foo_async<T>() -> impl Future<Output = ()> + Send
where
    T: Send,
{}
