macros/src/async_generic_target/fn/snapshots/expand_sync_condition.snap
---
source: macros/src/async_generic_target/fn/mod.rs
expression: formatted
---
fn foo() {
    {
        let __value = 0;
        __value
    }
}
async fn foo_async() {
    {
        let __value = 1;
        __value
    }
}
